# ad-intention

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_cli.py  setup.py
ad_intention/: __init__.py  config.py
ad_intention/classification/: __init__.py  classifier.py  rules.py
ad_intention/enhanced/: bert_classifier.py  cli.py  ensemble_classifier.py  gemini_classifier.py  nltk_setup.py  openai_judge.py  sentiment_classifier.py
ad_intention/utils/: __init__.py  batch_process.py  url_helpers.py
data/: sample_urls.csv  sample_urls_large.csv
examples/: batch_processing.py  classify_urls.py  ensemble_example.py  evaluate_performance.py  judge_validation_example.py  openai_api_tracking.py  openai_judge_tracking.py  sentiment_both_analyzers.py  sentiment_example.py  sentiment_separate_analyzers.py  simple_classification_report.py  simple_test.py
tests/: __init__.py  test_classifier.py  test_cta_paths.py  test_utils.py
